creando las clases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.config.import=optional:file:.env[.properties]
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: false
+spring.datasource.url=jdbc:postgresql://dpg-cj1k8d6nqqla1dh4kc90-a.oregon-postgres.render.com/bdgerardo?user=gerardo&password=JtdeqreGQK0iNrPzaZOwTOMb1L4tfenQ&sslmode=require
+
+spring.datasource.driver-class-name=org.postgresql.Driver
